--- a/dataset/JST_data_create.ipynb
+++ b/dataset/JST_data_create.ipynb
@@ -160,25 +160,7 @@
     "\n",
     "# load the dictionaries of tweets and combine them\n",
     "\n",
-    "total_tweet_dict = dict()\n",
-    "\n",
-    "layer_1_tweets_dict = pickle.load(open('../data/layer_1_tweets_dict', 'rb'))\n",
-    "total_tweet_dict.update(layer_1_tweets_dict)\n",
-    "\n",
-    "del layer_1_tweets_dict\n",
-    "gc.collect()\n",
-    "\n",
-    "layer_2_tweets_dict = pickle.load(open('../data/layer_2_tweets_dict', 'rb'))\n",
-    "total_tweet_dict.update(layer_2_tweets_dict)\n",
-    "\n",
-    "del layer_2_tweets_dict\n",
-    "gc.collect()\n",
-    "\n",
-    "layer_3_tweets_dict = pickle.load(open('../data/layer_3_tweets_dict', 'rb'))\n",
-    "total_tweet_dict.update(layer_3_tweets_dict)\n",
-    "\n",
-    "del layer_3_tweets_dict\n",
-    "gc.collect()"
+    "total_tweets_dict = pickle.load(open('layer_tweet_dict', 'rb'))\n",
    ]
   },
   {
