--- a/dataset/JST_data_create.ipynb
+++ b/dataset/JST_data_create.ipynb
@@ -160,7 +160,7 @@
     "\n",
     "# load the dictionaries of tweets and combine them\n",
     "\n",
-    "total_tweets_dict = pickle.load(open('layer_tweet_dict', 'rb'))\n",
+    "total_tweets_dict = pickle.load(open('layer_tweet_dict', 'rb'))\n"
    ]
   },
   {
