--- a/dataset/JST_data_create.ipynb
+++ b/dataset/JST_data_create.ipynb
@@ -160,7 +160,7 @@
     "\n",
     "# load the dictionaries of tweets and combine them\n",
     "\n",
-    "total_tweets_dict = pickle.load(open('layer_tweet_dict', 'rb'))\n"
+    "total_tweet_dict = pickle.load(open('layer_tweet_dict', 'rb'))\n"
    ]
   },
   {
@@ -326,7 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(r'../data/clean_dataset.csv')"
+    "df.to_csv('clean_dataset.csv')"
    ]
   }
  ],
